// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo email template export "frodo email template export --template-id activation": should export the email template with email id "activation" 1`] = `""`;

exports[`frodo email template export "frodo email template export --template-id activation": should export the email template with email id "activation": ./activation.template.email.json 1`] = `
{
  "emailTemplate": {
    "activation": {
      "_id": "emailTemplate/activation",
      "defaultLocale": "en",
      "displayName": "Activation",
      "emailTemplate": {},
      "enabled": true,
      "from": ""ForgeRock Identity Cloud Team" <saas@forgerock.com>",
      "html": {
        "en": "<div class="content"><p>Welcome {{object.givenName}}.</p><p>Your username is '{{object.userName}}'.</p></div>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: #455469; padding: 60px; text-align: center;"><div class="content" style="background-color: #fff; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;"><p>Welcome {{object.givenName}}.</p><p>Your username is '{{object.userName}}'.</p></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body {
	background-color: #324054;
	color: #455469;
	padding: 60px;
	text-align: center
}

a {
	text-decoration: none;
	color: #109cf1;
}

.content {
	background-color: #fff;
	border-radius: 4px;
	margin: 0 auto;
	padding: 48px;
	width: 235px
}
",
      "subject": {
        "en": "Your J.P. Morgan account has been activated",
      },
      "templateId": "activation",
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo email template export "frodo email template export -A": should export all email templates to separate files 1`] = `""`;

exports[`frodo email template export "frodo email template export -A": should export all email templates to separate files: ./FraudNotification.template.email.json 1`] = `
{
  "emailTemplate": {
    "FraudNotification": {
      "_id": "emailTemplate/FraudNotification",
      "defaultLocale": "en",
      "displayName": "Fraud Notification",
      "enabled": true,
      "from": "saas@forgerock.com",
      "html": {
        "en": "<div class="content"><p>Hello {{object.givenName}} {{object.sn}},</p><p>we blocked an attempt to access your Expanse account from a suspicious device!</p><p>Your Expanse Security Team.</p></div>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: #455469; padding: 60px; text-align: center;"><div class="content" style="background-color: red; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;"><p>Hello {{object.givenName}} {{object.sn}},</p><p>we blocked an attempt to access your Expanse account from a suspicious device!</p><p>Your Expanse Security Team.</p></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body {
 background-color: #324054;
 color: #455469;
 padding: 60px;
 text-align: center 
}
 a {
 text-decoration: none;
 color: #109cf1;
}
 .content {
 background-color: red;
 border-radius: 4px;
 margin: 0 auto;
 padding: 48px;
 width: 235px 
}
 ",
      "subject": {
        "en": "Fraud alert from your Expanse Account!",
      },
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo email template export "frodo email template export -A": should export all email templates to separate files: ./MobileEmailOTP.template.email.json 1`] = `
{
  "emailTemplate": {
    "MobileEmailOTP": {
      "_id": "emailTemplate/MobileEmailOTP",
      "defaultLocale": "en",
      "displayName": "Mobile Email OTP",
      "enabled": true,
      "from": "saas@forgerock.com",
      "html": {
        "en": "<div class="content"><h3 id="thisisyouronetimepassword">This is your one-time password:</h3><h4 id="objectfrunindexedinteger5">{{object.frUnindexedInteger5}}</h4></div>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: #455469; padding: 60px; text-align: center;"><div class="content" style="background-color: #fff; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;"><h3 id="thisisyouronetimepassword">This is your one-time password:</h3><h4 id="objectfrunindexedinteger5">{{object.frUnindexedInteger5}}</h4></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body {
 background-color: #324054;
 color: #455469;
 padding: 60px;
 text-align: center 
}
 a {
 text-decoration: none;
 color: #109cf1;
}
 .content {
 background-color: #fff;
 border-radius: 4px;
 margin: 0 auto;
 padding: 48px;
 width: 235px 
}
 ",
      "subject": {
        "en": "One-Time Password for Login",
      },
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo email template export "frodo email template export -A": should export all email templates to separate files: ./UnknownDeviceNotification.template.email.json 1`] = `
{
  "emailTemplate": {
    "UnknownDeviceNotification": {
      "_id": "emailTemplate/UnknownDeviceNotification",
      "defaultLocale": "en",
      "displayName": "Unknown Device Notification",
      "enabled": true,
      "from": "saas@forgerock.com",
      "html": {
        "en": "<div class="content"><p>Hello {{object.givenName}} {{object.sn}},</p><p>your Expanse account was accessed from an unknown device!</p><p>Your Expanse Security Team.</p></div>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: black; padding: 60px; text-align: center;"><div class="content" style="background-color: orange; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;"><p>Hello {{object.givenName}} {{object.sn}},</p><p>your Expanse account was accessed from an unknown device!</p><p>Your Expanse Security Team.</p></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body {
 background-color: #324054;
 color: black;
 padding: 60px;
 text-align: center 
}
 a {
 text-decoration: none;
 color: #109cf1;
}
 .content {
 background-color: orange;
 border-radius: 4px;
 margin: 0 auto;
 padding: 48px;
 width: 235px 
}
 ",
      "subject": {
        "en": "Your Expanse account was accessed from an unknown device!",
      },
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo email template export "frodo email template export -A": should export all email templates to separate files: ./activation.template.email.json 1`] = `
{
  "emailTemplate": {
    "activation": {
      "_id": "emailTemplate/activation",
      "defaultLocale": "en",
      "displayName": "Activation",
      "emailTemplate": {},
      "enabled": true,
      "from": ""ForgeRock Identity Cloud Team" <saas@forgerock.com>",
      "html": {
        "en": "<div class="content"><p>Welcome {{object.givenName}}.</p><p>Your username is '{{object.userName}}'.</p></div>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: #455469; padding: 60px; text-align: center;"><div class="content" style="background-color: #fff; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;"><p>Welcome {{object.givenName}}.</p><p>Your username is '{{object.userName}}'.</p></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body {
	background-color: #324054;
	color: #455469;
	padding: 60px;
	text-align: center
}

a {
	text-decoration: none;
	color: #109cf1;
}

.content {
	background-color: #fff;
	border-radius: 4px;
	margin: 0 auto;
	padding: 48px;
	width: 235px
}
",
      "subject": {
        "en": "Your J.P. Morgan account has been activated",
      },
      "templateId": "activation",
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo email template export "frodo email template export -A": should export all email templates to separate files: ./forgottenUsername.template.email.json 1`] = `
{
  "emailTemplate": {
    "forgottenUsername": {
      "_id": "emailTemplate/forgottenUsername",
      "defaultLocale": "en",
      "enabled": true,
      "from": "",
      "html": {
        "en": "<html><body>{{#if object.userName}}<p>Your username is '{{object.userName}}'.</p>{{else}}If you received this email in error, please disregard.{{/if}}<p><a href="{{object.resumeURI}}">Click here to login</a></p></body></html>",
        "fr": "<html><body>{{#if object.userName}}<p>Votre nom d'utilisateur est '{{object.userName}}'.</p>{{else}}Si vous avez reçu cet e-mail par erreur, veuillez ne pas en tenir compte.{{/if}}<p><a href="{{object.resumeURI}}">Cliquez ici pour vous connecter</a></p></body></html>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: #455469; padding: 60px; text-align: center;"><div class="content" style="background-color: #fff; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;"><p>{{#if object.userName}}Your username is '{{object.userName}}'.</p><p>{{else}}If you received this email in error, please disregard.{{/if}}</p><p><a href="{{object.resumeURI}}" style="text-decoration: none; color: #109cf1;">Click here to login</a></p></div></body></html>",
        "fr": "<html><head></head><body style="background-color: #324054; color: #455469; padding: 60px; text-align: center;"><div class="content" style="background-color: #fff; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;">{{#if object.userName}}<p>Votre nom d'utilisateur est '{{object.userName}}'.</p>{{else}}Si vous avez reçu cet e-mail par erreur, veuillez ne pas en tenir compte.{{/if}}<p><a href="{{object.resumeURI}}" style="text-decoration: none; color: #109cf1;">Cliquez ici pour vous connecter</a></p></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body{background-color:#324054;color:#5e6d82;padding:60px;text-align:center}a{text-decoration:none;color:#109cf1}.content{background-color:#fff;border-radius:4px;margin:0 auto;padding:48px;width:235px}",
      "subject": {
        "en": "Account Information - username",
        "fr": "Informations sur le compte - nom d'utilisateur",
      },
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo email template export "frodo email template export -A": should export all email templates to separate files: ./multiFactorEmailLink.template.email.json 1`] = `
{
  "emailTemplate": {
    "multiFactorEmailLink": {
      "_id": "emailTemplate/multiFactorEmailLink",
      "defaultLocale": "en",
      "enabled": true,
      "from": "",
      "message": {
        "en": "<html><body><h3>You started a login or profile update that requires MFA. </h3><h4><a href="{{object.resumeURI}}">Click to Proceed</a></h4></body></html>",
      },
      "mimeType": "text/html",
      "subject": {
        "en": "Multi-Factor Email for Identity Cloud login",
      },
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo email template export "frodo email template export -A": should export all email templates to separate files: ./oneTimePassword.template.email.json 1`] = `
{
  "emailTemplate": {
    "oneTimePassword": {
      "_id": "emailTemplate/oneTimePassword",
      "defaultLocale": "en",
      "enabled": true,
      "from": "",
      "message": {
        "en": "<h3>This is your one-time password:</h3><h4>{{object.description}}</a></h4>",
      },
      "mimeType": "text/html",
      "subject": {
        "en": "One-Time Password for login",
      },
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo email template export "frodo email template export -A": should export all email templates to separate files: ./profileUpdateNotification.template.email.json 1`] = `
{
  "emailTemplate": {
    "profileUpdateNotification": {
      "_id": "emailTemplate/profileUpdateNotification",
      "defaultLocale": "en",
      "displayName": "Profile Update Notification",
      "enabled": true,
      "from": "saas@forgerock.com",
      "html": {
        "en": "<div class="content"><p>Hello {{object.givenName}},</p><p>your user profile has been updated. If you did not make those changes yourself or requested them, please contact us immediately.</p><p>Kindest regards.</p></div>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: #455469; padding: 60px; text-align: center;"><div class="content" style="background-color: #fff; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;"><p>Hello {{object.givenName}},</p><p>your user profile has been updated. If you did not make those changes yourself or requested them, please contact us immediately.</p><p>Kindest regards.</p></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body {
 background-color: #324054;
 color: #455469;
 padding: 60px;
 text-align: center 
}
 a {
 text-decoration: none;
 color: #109cf1;
}
 .content {
 background-color: #fff;
 border-radius: 4px;
 margin: 0 auto;
 padding: 48px;
 width: 235px 
}
 ",
      "subject": {
        "en": "Your user profile has been updated",
      },
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo email template export "frodo email template export -A": should export all email templates to separate files: ./profileUpdateNotificationEmailChange.template.email.json 1`] = `
{
  "emailTemplate": {
    "profileUpdateNotificationEmailChange": {
      "_id": "emailTemplate/profileUpdateNotificationEmailChange",
      "defaultLocale": "en",
      "displayName": "Email Address Change Notification",
      "enabled": true,
      "from": "saas@forgerock.com",
      "html": {
        "en": "<div class="content"><p>Hello {{object.givenName}},</p><p>your user profile has been updated and your email address has changed. This email is sent to the old address we had on file. If you did not make those changes yourself or requested them, please contact us immediately.</p><p>Old: {{object.frUnindexedString5}}<br>
New: {{object.mail}}</p><p>Kindest regards.</p></div>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: #455469; padding: 60px; text-align: left;"><div class="content" style="background-color: #fff; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;"><p>Hello {{object.givenName}},</p><p>your user profile has been updated and your email address has changed. This email is sent to the old address we had on file. If you did not make those changes yourself or requested them, please contact us immediately.</p><p>Old: {{object.frUnindexedString5}}<br>
New: {{object.mail}}</p><p>Kindest regards.</p></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body {
 background-color: #324054;
 color: #455469;
 padding: 60px;
 text-align: left 
}
 a {
 text-decoration: none;
 color: #109cf1;
}
 .content {
 background-color: #fff;
 border-radius: 4px;
 margin: 0 auto;
 padding: 48px;
 width: 235px 
}
 ",
      "subject": {
        "en": "You email address and profile has been updated",
      },
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo email template export "frodo email template export -A": should export all email templates to separate files: ./registration.template.email.json 1`] = `
{
  "emailTemplate": {
    "registration": {
      "_id": "emailTemplate/registration",
      "advancedEditor": true,
      "defaultLocale": "en",
      "displayName": "registration",
      "emailTemplate": {},
      "enabled": true,
      "from": ""J.P Morgan" <sass@forgerock.com>",
      "html": {
        "en": "",
        "fr": "",
      },
      "message": {
        "en": "<html>
  <head></head>
  <body style="color: #455469; text-align: center; font-family: 'Open Sans'; width: 400px; margin: auto;">
    <div class="content" style="background-color: #fff; border-radius: 4px;">
      <h4 id="youhavebeeninvitedtojoinjpmcembeddedbanking" style="font-style: normal; font-weight: 400;">You have been invited to join 
        
        <strong>JPMC Developer Console</strong>
      </h4>
      <p>
        <a href="{{object.resumeURI}}" style="text-decoration: none; color: white; background-color: #1A7B99; padding: 10px">ACCEPT INVITE</a>
      </p>
      <h6 id="copyright2022ofjpmorganchaseco" style="color: #999999; font-family: 'Inter'; -font-style: normal; font-weight: 400; font-size: 12px; line-height: 16px;">Copyright © 2022 of J.P. Morgan Chase & Co.</h6>
    </div>
  </body>
</html>",
        "fr": "<html><head></head><body style="color: #455469; text-align: center; font-family: 'Open Sans'; width: 400px; margin: auto;"><div class="content" style="background-color: #fff; border-radius: 4px;"><h3 id="ceciestvotremaildinscription" style="text-align: left;">Ceci est votre mail d'inscription.</h3><p><a href="{{object.resumeURI}}" style="text-decoration: none; color: white;">Lien de vérification email</a></p></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body {
   color: #455469;
   text-align: center;
   font-family: 'Open Sans';
   width: 400px;
   margin: auto;
}
 td {
   text-decoration: none;
   color: white;
   background: #155C93;
   font-style: normal;
   font-weight: 700;
   font-size: 14px;
   line-height: 22px;
   border-radius: 3px;
   padding: 15px;
}
 .content {
   background-color: #fff;
   border-radius: 4px;
}
 h2 {
   margin: 50px;
}
 h3 {
   text-align: left;
}
 h4 {
   font-style: normal;
   font-weight: 400;
}
 h5 {
   color: #666666;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
}
 h6 {
   color: #999999;
   font-family: 'Inter';
   -font-style: normal;
   font-weight: 400;
   font-size: 12px;
   line-height: 16px;
}
 table {
   margin: auto;
   background-color: #dedddc;
}
 tr {
   background-color: #dedddc;
}

a {
  text-decoration: none;
  color: white;
} ",
      "subject": {
        "en": "You're invited to join JPMC Embedded Banking",
        "fr": "Créer un nouveau compte",
      },
      "templateId": "registration",
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo email template export "frodo email template export -A": should export all email templates to separate files: ./resetPassword.template.email.json 1`] = `
{
  "emailTemplate": {
    "resetPassword": {
      "_id": "emailTemplate/resetPassword",
      "defaultLocale": "en",
      "enabled": true,
      "from": "",
      "message": {
        "en": "<h3>Click to reset your password</h3><h4><a href="{{object.resumeURI}}">Password reset link</a></h4>",
        "fr": "<h3>Cliquez pour réinitialiser votre mot de passe</h3><h4><a href="{{object.resumeURI}}">Mot de passe lien de réinitialisation</a></h4>",
      },
      "mimeType": "text/html",
      "subject": {
        "en": "Reset your password",
        "fr": "Réinitialisez votre mot de passe",
      },
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo email template export "frodo email template export -A": should export all email templates to separate files: ./updatePassword.template.email.json 1`] = `
{
  "emailTemplate": {
    "updatePassword": {
      "_id": "emailTemplate/updatePassword",
      "defaultLocale": "en",
      "enabled": true,
      "from": "",
      "html": {
        "en": "<h3>Verify email to update password</h3><p><a href="{{object.resumeURI}}">Update password link</a></p>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: #5e6d82; padding: 60px; text-align: center;"><div class="content" style="background-color: #fff; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;"><h3 id="verifyemailtoupdatepassword">Verify email to update password</h3><p><a href="{{object.resumeURI}}" style="text-decoration: none; color: #109cf1;">Update password link</a></p></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body{background-color:#324054;color:#5e6d82;padding:60px;text-align:center}a{text-decoration:none;color:#109cf1}.content{background-color:#fff;border-radius:4px;margin:0 auto;padding:48px;width:235px}",
      "subject": {
        "en": "Update your password",
      },
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo email template export "frodo email template export -A": should export all email templates to separate files: ./welcome.template.email.json 1`] = `
{
  "emailTemplate": {
    "welcome": {
      "_id": "emailTemplate/welcome",
      "defaultLocale": "en",
      "displayName": "Welcome",
      "enabled": true,
      "from": "saas@forgerock.com",
      "html": {
        "en": "<div class="content"><p>Welcome. Your username is '{{object.userName}}'.</p></div>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: #5e6d82; padding: 60px; text-align: center;"><div class="content" style="background-color: #fff; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;"><p>Welcome. Your username is '{{object.userName}}'.</p></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body{
 background-color:#324054;
 color:#5e6d82;
 padding:60px;
 text-align:center
}
a{
 text-decoration:none;
 color:#109cf1
}
.content{
 background-color:#fff;
 border-radius:4px;
 margin:0 auto;
 padding:48px;
 width:235px
}
",
      "subject": {
        "en": "Your account has been created",
      },
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo email template export "frodo email template export -a --file my-allEmailTemplates.template.email.json": should export all email templates to a single file named my-allEmailTemplates.template.email.json 1`] = `""`;

exports[`frodo email template export "frodo email template export -a --file my-allEmailTemplates.template.email.json": should export all email templates to a single file named my-allEmailTemplates.template.email.json: ./my-allEmailTemplates.template.email.json 1`] = `
{
  "emailTemplate": {
    "FraudNotification": {
      "_id": "emailTemplate/FraudNotification",
      "defaultLocale": "en",
      "displayName": "Fraud Notification",
      "enabled": true,
      "from": "saas@forgerock.com",
      "html": {
        "en": "<div class="content"><p>Hello {{object.givenName}} {{object.sn}},</p><p>we blocked an attempt to access your Expanse account from a suspicious device!</p><p>Your Expanse Security Team.</p></div>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: #455469; padding: 60px; text-align: center;"><div class="content" style="background-color: red; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;"><p>Hello {{object.givenName}} {{object.sn}},</p><p>we blocked an attempt to access your Expanse account from a suspicious device!</p><p>Your Expanse Security Team.</p></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body {
 background-color: #324054;
 color: #455469;
 padding: 60px;
 text-align: center 
}
 a {
 text-decoration: none;
 color: #109cf1;
}
 .content {
 background-color: red;
 border-radius: 4px;
 margin: 0 auto;
 padding: 48px;
 width: 235px 
}
 ",
      "subject": {
        "en": "Fraud alert from your Expanse Account!",
      },
    },
    "MobileEmailOTP": {
      "_id": "emailTemplate/MobileEmailOTP",
      "defaultLocale": "en",
      "displayName": "Mobile Email OTP",
      "enabled": true,
      "from": "saas@forgerock.com",
      "html": {
        "en": "<div class="content"><h3 id="thisisyouronetimepassword">This is your one-time password:</h3><h4 id="objectfrunindexedinteger5">{{object.frUnindexedInteger5}}</h4></div>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: #455469; padding: 60px; text-align: center;"><div class="content" style="background-color: #fff; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;"><h3 id="thisisyouronetimepassword">This is your one-time password:</h3><h4 id="objectfrunindexedinteger5">{{object.frUnindexedInteger5}}</h4></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body {
 background-color: #324054;
 color: #455469;
 padding: 60px;
 text-align: center 
}
 a {
 text-decoration: none;
 color: #109cf1;
}
 .content {
 background-color: #fff;
 border-radius: 4px;
 margin: 0 auto;
 padding: 48px;
 width: 235px 
}
 ",
      "subject": {
        "en": "One-Time Password for Login",
      },
    },
    "UnknownDeviceNotification": {
      "_id": "emailTemplate/UnknownDeviceNotification",
      "defaultLocale": "en",
      "displayName": "Unknown Device Notification",
      "enabled": true,
      "from": "saas@forgerock.com",
      "html": {
        "en": "<div class="content"><p>Hello {{object.givenName}} {{object.sn}},</p><p>your Expanse account was accessed from an unknown device!</p><p>Your Expanse Security Team.</p></div>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: black; padding: 60px; text-align: center;"><div class="content" style="background-color: orange; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;"><p>Hello {{object.givenName}} {{object.sn}},</p><p>your Expanse account was accessed from an unknown device!</p><p>Your Expanse Security Team.</p></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body {
 background-color: #324054;
 color: black;
 padding: 60px;
 text-align: center 
}
 a {
 text-decoration: none;
 color: #109cf1;
}
 .content {
 background-color: orange;
 border-radius: 4px;
 margin: 0 auto;
 padding: 48px;
 width: 235px 
}
 ",
      "subject": {
        "en": "Your Expanse account was accessed from an unknown device!",
      },
    },
    "Welcome": {
      "_id": "emailTemplate/Welcome",
      "defaultLocale": "en",
      "displayName": "Welcome",
      "enabled": true,
      "from": "saas@forgerock.com",
      "html": {
        "en": "<div class="content"><p>Welcome to Expanse, {{object.givenName}}!</p><p><a href="https://openam-huntington-dev.forgeblocks.com/am/XUI/?realm=/alpha#/service/Login">Access your account</a> with your new username: {{object.userName}}</p><p>We are looking forward to servicing all your banking needs!</p><p>Your Expanse Team.</p></div>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: black; padding: 10px; text-align: left;"><div class="content" style="background-color: #ffffff; border-radius: 4px; margin: 0 auto; padding: 10px; width: 300px;"><p>Welcome to Expanse, {{object.givenName}}!</p><p><a href="https://openam-huntington-dev.forgeblocks.com/am/XUI/?realm=/alpha#/service/Login" style="text-decoration: none; color: #109cf1;">Access your account</a> with your new username: {{object.userName}}</p><p>We are looking forward to servicing all your banking needs!</p><p>Your Expanse Team.</p></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body {
 background-color: #324054;
 color: black;
 padding: 10px;
 text-align: left 
}
 a {
 text-decoration: none;
 color: #109cf1;
}
 .content {
 background-color: #ffffff;
 border-radius: 4px;
 margin: 0 auto;
 padding: 10px;
 width: 300px 
}
 ",
      "subject": {
        "en": "Your registration with Expanse",
      },
    },
    "activation": {
      "_id": "emailTemplate/activation",
      "defaultLocale": "en",
      "displayName": "Activation",
      "emailTemplate": {},
      "enabled": true,
      "from": ""ForgeRock Identity Cloud Team" <saas@forgerock.com>",
      "html": {
        "en": "<div class="content"><p>Welcome {{object.givenName}}.</p><p>Your username is '{{object.userName}}'.</p></div>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: #455469; padding: 60px; text-align: center;"><div class="content" style="background-color: #fff; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;"><p>Welcome {{object.givenName}}.</p><p>Your username is '{{object.userName}}'.</p></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body {
	background-color: #324054;
	color: #455469;
	padding: 60px;
	text-align: center
}

a {
	text-decoration: none;
	color: #109cf1;
}

.content {
	background-color: #fff;
	border-radius: 4px;
	margin: 0 auto;
	padding: 48px;
	width: 235px
}
",
      "subject": {
        "en": "Your J.P. Morgan account has been activated",
      },
      "templateId": "activation",
    },
    "arvestUnknownDeviceNotification": {
      "_id": "emailTemplate/arvestUnknownDeviceNotification",
      "defaultLocale": "en",
      "description": "",
      "displayName": "Arvest Unknown Device Notification",
      "enabled": true,
      "from": ""Arvest IT Security " <admin@arvest-demo.com>",
      "html": {
        "en": "<div class="content"><p>Hello {{object.givenName}} {{object.sn}},</p><p>your Arvest account was accessed from an unknown device!</p><p>Your Arvest Cyber Security Team.</p></div>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: black; padding: 60px; text-align: center;"><div class="content" style="background-color: orange; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;"><p>Hello {{object.givenName}} {{object.sn}},</p><p>your Arvest account was accessed from an unknown device!</p><p>Your Arvest Cyber Security Team.</p></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body {
 background-color: #324054;
 color: black;
 padding: 60px;
 text-align: center 
}
 a {
 text-decoration: none;
 color: #109cf1;
}
 .content {
 background-color: orange;
 border-radius: 4px;
 margin: 0 auto;
 padding: 48px;
 width: 235px 
}
 ",
      "subject": {
        "en": "Your Arvest Bank account was accessed from an unknown device!",
      },
      "templateId": "arvestUnknownDeviceNotification",
    },
    "arvestWelcome": {
      "_id": "emailTemplate/arvestWelcome",
      "defaultLocale": "en",
      "description": "",
      "displayName": "ArvestWelcome",
      "enabled": true,
      "from": ""Arvest Admin" <admin@idcloud-demo.com>",
      "html": {
        "en": "<div class="content"><p>Welcome to Arvest Bank, {{object.givenName}}!</p><p><a href="https://openam-idcloud-demo.forgeblocks.com/am/XUI/?realm=/alpha#/service/IBX_Login">Access your account</a> with your new username: {{object.userName}}</p><p>We are looking forward to servicing all your banking needs!</p><p>Your Arvest Team</p></div>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: black; padding: 10px; text-align: left;"><div class="content" style="background-color: #ffffff; border-radius: 4px; margin: 0 auto; padding: 10px; width: 300px;"><p>Welcome to Arvest Bank, {{object.givenName}}!</p><p><a href="https://openam-idcloud-demo.forgeblocks.com/am/XUI/?realm=/alpha#/service/IBX_Login" style="text-decoration: none; color: #109cf1;">Access your account</a> with your new username: {{object.userName}}</p><p>We are looking forward to servicing all your banking needs!</p><p>Your Arvest Team</p></div></body></html>",
      },
      "mimeType": "text/html",
      "name": "Welcome",
      "styles": "body {
 background-color: #324054;
 color: black;
 padding: 10px;
 text-align: left 
}
 a {
 text-decoration: none;
 color: #109cf1;
}
 .content {
 background-color: #ffffff;
 border-radius: 4px;
 margin: 0 auto;
 padding: 10px;
 width: 300px 
}
 ",
      "subject": {
        "en": "Your registration with Arvest Bank",
      },
      "templateId": "arvestWelcome",
    },
    "ebInvitation": {
      "_id": "emailTemplate/ebInvitation",
      "advancedEditor": true,
      "defaultLocale": "en",
      "description": "",
      "displayName": "EBInvitation",
      "enabled": true,
      "from": ""J.P Morgan " <>",
      "html": {
        "en": "",
      },
      "message": {
        "en": "<html>
  <head></head>
  <body style="display: 'flex'; textAlign: 'center'; color: #455469; font-family: 'Open Sans';">
    <div class="content" style="textAlign: 'center'">
      <p> Dear {{object.givenName}}, </p>
      <h4 style="font-weight: 400; font-style: normal;">You have been invited to join
        <b>JPMC Embedded Banking</b>
      </h4>
      <table>
        <tr>
          <td style="text-decoration: none; color: white; background: #155c93; font-						style: normal; font-weight: 700; font-size: 14px; line-height: 22px; border-					radius: 3px; padding: 15px">
            <a href={{object.resumeURI}} style="text-decoration: none; color: white">ACCEPT INVITE</a>
          </td>
        </tr>
      </table>
      <h6 style="color: #999999; font-family: Inter; font-style: normal; font-weight: 400; font-size: 12px; line-height: 16px">Copyright © 2022 of J.P. Morgan Chase & Co.</h6>
    </div>
  </body>
</html>
 ",
      },
      "mimeType": "text/html",
      "name": "invitation",
      "styles": "body {
   margin: 0;
   padding: 0;
   color: #455469;
   font-family: 'Open Sans';
}
 table {
   width:100%;
   border-collapse:collapse;
   border:0;
   border-spacing:0;
   background:#ffffff;
   text-align: center;
}
 tbody {
}
 ",
      "subject": {
        "en": "You're invited to join the JPMC Embedded Banking",
      },
      "templateId": "ebInvitation",
    },
    "forgottenUsername": {
      "_id": "emailTemplate/forgottenUsername",
      "defaultLocale": "en",
      "enabled": true,
      "from": "",
      "html": {
        "en": "<html><body>{{#if object.userName}}<p>Your username is '{{object.userName}}'.</p>{{else}}If you received this email in error, please disregard.{{/if}}<p><a href="{{object.resumeURI}}">Click here to login</a></p></body></html>",
        "fr": "<html><body>{{#if object.userName}}<p>Votre nom d'utilisateur est '{{object.userName}}'.</p>{{else}}Si vous avez reçu cet e-mail par erreur, veuillez ne pas en tenir compte.{{/if}}<p><a href="{{object.resumeURI}}">Cliquez ici pour vous connecter</a></p></body></html>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: #455469; padding: 60px; text-align: center;"><div class="content" style="background-color: #fff; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;"><p>{{#if object.userName}}Your username is '{{object.userName}}'.</p><p>{{else}}If you received this email in error, please disregard.{{/if}}</p><p><a href="{{object.resumeURI}}" style="text-decoration: none; color: #109cf1;">Click here to login</a></p></div></body></html>",
        "fr": "<html><head></head><body style="background-color: #324054; color: #455469; padding: 60px; text-align: center;"><div class="content" style="background-color: #fff; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;">{{#if object.userName}}<p>Votre nom d'utilisateur est '{{object.userName}}'.</p>{{else}}Si vous avez reçu cet e-mail par erreur, veuillez ne pas en tenir compte.{{/if}}<p><a href="{{object.resumeURI}}" style="text-decoration: none; color: #109cf1;">Cliquez ici pour vous connecter</a></p></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body{background-color:#324054;color:#5e6d82;padding:60px;text-align:center}a{text-decoration:none;color:#109cf1}.content{background-color:#fff;border-radius:4px;margin:0 auto;padding:48px;width:235px}",
      "subject": {
        "en": "Account Information - username",
        "fr": "Informations sur le compte - nom d'utilisateur",
      },
    },
    "multiFactorEmailLink": {
      "_id": "emailTemplate/multiFactorEmailLink",
      "defaultLocale": "en",
      "enabled": true,
      "from": "",
      "message": {
        "en": "<html><body><h3>You started a login or profile update that requires MFA. </h3><h4><a href="{{object.resumeURI}}">Click to Proceed</a></h4></body></html>",
      },
      "mimeType": "text/html",
      "subject": {
        "en": "Multi-Factor Email for Identity Cloud login",
      },
    },
    "oneTimePassword": {
      "_id": "emailTemplate/oneTimePassword",
      "defaultLocale": "en",
      "enabled": true,
      "from": "",
      "message": {
        "en": "<h3>This is your one-time password:</h3><h4>{{object.description}}</a></h4>",
      },
      "mimeType": "text/html",
      "subject": {
        "en": "One-Time Password for login",
      },
    },
    "profileUpdateNotification": {
      "_id": "emailTemplate/profileUpdateNotification",
      "defaultLocale": "en",
      "displayName": "Profile Update Notification",
      "enabled": true,
      "from": "saas@forgerock.com",
      "html": {
        "en": "<div class="content"><p>Hello {{object.givenName}},</p><p>your user profile has been updated. If you did not make those changes yourself or requested them, please contact us immediately.</p><p>Kindest regards.</p></div>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: #455469; padding: 60px; text-align: center;"><div class="content" style="background-color: #fff; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;"><p>Hello {{object.givenName}},</p><p>your user profile has been updated. If you did not make those changes yourself or requested them, please contact us immediately.</p><p>Kindest regards.</p></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body {
 background-color: #324054;
 color: #455469;
 padding: 60px;
 text-align: center 
}
 a {
 text-decoration: none;
 color: #109cf1;
}
 .content {
 background-color: #fff;
 border-radius: 4px;
 margin: 0 auto;
 padding: 48px;
 width: 235px 
}
 ",
      "subject": {
        "en": "Your user profile has been updated",
      },
    },
    "profileUpdateNotificationEmailChange": {
      "_id": "emailTemplate/profileUpdateNotificationEmailChange",
      "defaultLocale": "en",
      "displayName": "Email Address Change Notification",
      "enabled": true,
      "from": "saas@forgerock.com",
      "html": {
        "en": "<div class="content"><p>Hello {{object.givenName}},</p><p>your user profile has been updated and your email address has changed. This email is sent to the old address we had on file. If you did not make those changes yourself or requested them, please contact us immediately.</p><p>Old: {{object.frUnindexedString5}}<br>
New: {{object.mail}}</p><p>Kindest regards.</p></div>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: #455469; padding: 60px; text-align: left;"><div class="content" style="background-color: #fff; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;"><p>Hello {{object.givenName}},</p><p>your user profile has been updated and your email address has changed. This email is sent to the old address we had on file. If you did not make those changes yourself or requested them, please contact us immediately.</p><p>Old: {{object.frUnindexedString5}}<br>
New: {{object.mail}}</p><p>Kindest regards.</p></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body {
 background-color: #324054;
 color: #455469;
 padding: 60px;
 text-align: left 
}
 a {
 text-decoration: none;
 color: #109cf1;
}
 .content {
 background-color: #fff;
 border-radius: 4px;
 margin: 0 auto;
 padding: 48px;
 width: 235px 
}
 ",
      "subject": {
        "en": "You email address and profile has been updated",
      },
    },
    "registration": {
      "_id": "emailTemplate/registration",
      "advancedEditor": true,
      "defaultLocale": "en",
      "displayName": "registration",
      "emailTemplate": {},
      "enabled": true,
      "from": ""J.P Morgan" <sass@forgerock.com>",
      "html": {
        "en": "",
        "fr": "",
      },
      "message": {
        "en": "<html>
  <head></head>
  <body style="color: #455469; text-align: center; font-family: 'Open Sans'; width: 400px; margin: auto;">
    <div class="content" style="background-color: #fff; border-radius: 4px;">
      <h4 id="youhavebeeninvitedtojoinjpmcembeddedbanking" style="font-style: normal; font-weight: 400;">You have been invited to join 
        
        <strong>JPMC Developer Console</strong>
      </h4>
      <p>
        <a href="{{object.resumeURI}}" style="text-decoration: none; color: white; background-color: #1A7B99; padding: 10px">ACCEPT INVITE</a>
      </p>
      <h6 id="copyright2022ofjpmorganchaseco" style="color: #999999; font-family: 'Inter'; -font-style: normal; font-weight: 400; font-size: 12px; line-height: 16px;">Copyright © 2022 of J.P. Morgan Chase & Co.</h6>
    </div>
  </body>
</html>",
        "fr": "<html><head></head><body style="color: #455469; text-align: center; font-family: 'Open Sans'; width: 400px; margin: auto;"><div class="content" style="background-color: #fff; border-radius: 4px;"><h3 id="ceciestvotremaildinscription" style="text-align: left;">Ceci est votre mail d'inscription.</h3><p><a href="{{object.resumeURI}}" style="text-decoration: none; color: white;">Lien de vérification email</a></p></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body {
   color: #455469;
   text-align: center;
   font-family: 'Open Sans';
   width: 400px;
   margin: auto;
}
 td {
   text-decoration: none;
   color: white;
   background: #155C93;
   font-style: normal;
   font-weight: 700;
   font-size: 14px;
   line-height: 22px;
   border-radius: 3px;
   padding: 15px;
}
 .content {
   background-color: #fff;
   border-radius: 4px;
}
 h2 {
   margin: 50px;
}
 h3 {
   text-align: left;
}
 h4 {
   font-style: normal;
   font-weight: 400;
}
 h5 {
   color: #666666;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
}
 h6 {
   color: #999999;
   font-family: 'Inter';
   -font-style: normal;
   font-weight: 400;
   font-size: 12px;
   line-height: 16px;
}
 table {
   margin: auto;
   background-color: #dedddc;
}
 tr {
   background-color: #dedddc;
}

a {
  text-decoration: none;
  color: white;
} ",
      "subject": {
        "en": "You're invited to join JPMC Embedded Banking",
        "fr": "Créer un nouveau compte",
      },
      "templateId": "registration",
    },
    "resetPassword": {
      "_id": "emailTemplate/resetPassword",
      "defaultLocale": "en",
      "enabled": true,
      "from": "",
      "message": {
        "en": "<h3>Click to reset your password</h3><h4><a href="{{object.resumeURI}}">Password reset link</a></h4>",
        "fr": "<h3>Cliquez pour réinitialiser votre mot de passe</h3><h4><a href="{{object.resumeURI}}">Mot de passe lien de réinitialisation</a></h4>",
      },
      "mimeType": "text/html",
      "subject": {
        "en": "Reset your password",
        "fr": "Réinitialisez votre mot de passe",
      },
    },
    "updatePassword": {
      "_id": "emailTemplate/updatePassword",
      "defaultLocale": "en",
      "enabled": true,
      "from": "",
      "html": {
        "en": "<h3>Verify email to update password</h3><p><a href="{{object.resumeURI}}">Update password link</a></p>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: #5e6d82; padding: 60px; text-align: center;"><div class="content" style="background-color: #fff; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;"><h3 id="verifyemailtoupdatepassword">Verify email to update password</h3><p><a href="{{object.resumeURI}}" style="text-decoration: none; color: #109cf1;">Update password link</a></p></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body{background-color:#324054;color:#5e6d82;padding:60px;text-align:center}a{text-decoration:none;color:#109cf1}.content{background-color:#fff;border-radius:4px;margin:0 auto;padding:48px;width:235px}",
      "subject": {
        "en": "Update your password",
      },
    },
    "welcome": {
      "_id": "emailTemplate/welcome",
      "defaultLocale": "en",
      "displayName": "Welcome",
      "enabled": true,
      "from": "saas@forgerock.com",
      "html": {
        "en": "<div class="content"><p>Welcome. Your username is '{{object.userName}}'.</p></div>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: #5e6d82; padding: 60px; text-align: center;"><div class="content" style="background-color: #fff; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;"><p>Welcome. Your username is '{{object.userName}}'.</p></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body{
 background-color:#324054;
 color:#5e6d82;
 padding:60px;
 text-align:center
}
a{
 text-decoration:none;
 color:#109cf1
}
.content{
 background-color:#fff;
 border-radius:4px;
 margin:0 auto;
 padding:48px;
 width:235px
}
",
      "subject": {
        "en": "Your account has been created",
      },
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo email template export "frodo email template export -a": should export all email templates to a single file 1`] = `""`;

exports[`frodo email template export "frodo email template export -a": should export all email templates to a single file: ./allEmailTemplates.template.email.json 1`] = `
{
  "emailTemplate": {
    "FraudNotification": {
      "_id": "emailTemplate/FraudNotification",
      "defaultLocale": "en",
      "displayName": "Fraud Notification",
      "enabled": true,
      "from": "saas@forgerock.com",
      "html": {
        "en": "<div class="content"><p>Hello {{object.givenName}} {{object.sn}},</p><p>we blocked an attempt to access your Expanse account from a suspicious device!</p><p>Your Expanse Security Team.</p></div>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: #455469; padding: 60px; text-align: center;"><div class="content" style="background-color: red; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;"><p>Hello {{object.givenName}} {{object.sn}},</p><p>we blocked an attempt to access your Expanse account from a suspicious device!</p><p>Your Expanse Security Team.</p></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body {
 background-color: #324054;
 color: #455469;
 padding: 60px;
 text-align: center 
}
 a {
 text-decoration: none;
 color: #109cf1;
}
 .content {
 background-color: red;
 border-radius: 4px;
 margin: 0 auto;
 padding: 48px;
 width: 235px 
}
 ",
      "subject": {
        "en": "Fraud alert from your Expanse Account!",
      },
    },
    "MobileEmailOTP": {
      "_id": "emailTemplate/MobileEmailOTP",
      "defaultLocale": "en",
      "displayName": "Mobile Email OTP",
      "enabled": true,
      "from": "saas@forgerock.com",
      "html": {
        "en": "<div class="content"><h3 id="thisisyouronetimepassword">This is your one-time password:</h3><h4 id="objectfrunindexedinteger5">{{object.frUnindexedInteger5}}</h4></div>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: #455469; padding: 60px; text-align: center;"><div class="content" style="background-color: #fff; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;"><h3 id="thisisyouronetimepassword">This is your one-time password:</h3><h4 id="objectfrunindexedinteger5">{{object.frUnindexedInteger5}}</h4></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body {
 background-color: #324054;
 color: #455469;
 padding: 60px;
 text-align: center 
}
 a {
 text-decoration: none;
 color: #109cf1;
}
 .content {
 background-color: #fff;
 border-radius: 4px;
 margin: 0 auto;
 padding: 48px;
 width: 235px 
}
 ",
      "subject": {
        "en": "One-Time Password for Login",
      },
    },
    "UnknownDeviceNotification": {
      "_id": "emailTemplate/UnknownDeviceNotification",
      "defaultLocale": "en",
      "displayName": "Unknown Device Notification",
      "enabled": true,
      "from": "saas@forgerock.com",
      "html": {
        "en": "<div class="content"><p>Hello {{object.givenName}} {{object.sn}},</p><p>your Expanse account was accessed from an unknown device!</p><p>Your Expanse Security Team.</p></div>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: black; padding: 60px; text-align: center;"><div class="content" style="background-color: orange; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;"><p>Hello {{object.givenName}} {{object.sn}},</p><p>your Expanse account was accessed from an unknown device!</p><p>Your Expanse Security Team.</p></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body {
 background-color: #324054;
 color: black;
 padding: 60px;
 text-align: center 
}
 a {
 text-decoration: none;
 color: #109cf1;
}
 .content {
 background-color: orange;
 border-radius: 4px;
 margin: 0 auto;
 padding: 48px;
 width: 235px 
}
 ",
      "subject": {
        "en": "Your Expanse account was accessed from an unknown device!",
      },
    },
    "Welcome": {
      "_id": "emailTemplate/Welcome",
      "defaultLocale": "en",
      "displayName": "Welcome",
      "enabled": true,
      "from": "saas@forgerock.com",
      "html": {
        "en": "<div class="content"><p>Welcome to Expanse, {{object.givenName}}!</p><p><a href="https://openam-huntington-dev.forgeblocks.com/am/XUI/?realm=/alpha#/service/Login">Access your account</a> with your new username: {{object.userName}}</p><p>We are looking forward to servicing all your banking needs!</p><p>Your Expanse Team.</p></div>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: black; padding: 10px; text-align: left;"><div class="content" style="background-color: #ffffff; border-radius: 4px; margin: 0 auto; padding: 10px; width: 300px;"><p>Welcome to Expanse, {{object.givenName}}!</p><p><a href="https://openam-huntington-dev.forgeblocks.com/am/XUI/?realm=/alpha#/service/Login" style="text-decoration: none; color: #109cf1;">Access your account</a> with your new username: {{object.userName}}</p><p>We are looking forward to servicing all your banking needs!</p><p>Your Expanse Team.</p></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body {
 background-color: #324054;
 color: black;
 padding: 10px;
 text-align: left 
}
 a {
 text-decoration: none;
 color: #109cf1;
}
 .content {
 background-color: #ffffff;
 border-radius: 4px;
 margin: 0 auto;
 padding: 10px;
 width: 300px 
}
 ",
      "subject": {
        "en": "Your registration with Expanse",
      },
    },
    "activation": {
      "_id": "emailTemplate/activation",
      "defaultLocale": "en",
      "displayName": "Activation",
      "emailTemplate": {},
      "enabled": true,
      "from": ""ForgeRock Identity Cloud Team" <saas@forgerock.com>",
      "html": {
        "en": "<div class="content"><p>Welcome {{object.givenName}}.</p><p>Your username is '{{object.userName}}'.</p></div>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: #455469; padding: 60px; text-align: center;"><div class="content" style="background-color: #fff; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;"><p>Welcome {{object.givenName}}.</p><p>Your username is '{{object.userName}}'.</p></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body {
	background-color: #324054;
	color: #455469;
	padding: 60px;
	text-align: center
}

a {
	text-decoration: none;
	color: #109cf1;
}

.content {
	background-color: #fff;
	border-radius: 4px;
	margin: 0 auto;
	padding: 48px;
	width: 235px
}
",
      "subject": {
        "en": "Your J.P. Morgan account has been activated",
      },
      "templateId": "activation",
    },
    "arvestUnknownDeviceNotification": {
      "_id": "emailTemplate/arvestUnknownDeviceNotification",
      "defaultLocale": "en",
      "description": "",
      "displayName": "Arvest Unknown Device Notification",
      "enabled": true,
      "from": ""Arvest IT Security " <admin@arvest-demo.com>",
      "html": {
        "en": "<div class="content"><p>Hello {{object.givenName}} {{object.sn}},</p><p>your Arvest account was accessed from an unknown device!</p><p>Your Arvest Cyber Security Team.</p></div>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: black; padding: 60px; text-align: center;"><div class="content" style="background-color: orange; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;"><p>Hello {{object.givenName}} {{object.sn}},</p><p>your Arvest account was accessed from an unknown device!</p><p>Your Arvest Cyber Security Team.</p></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body {
 background-color: #324054;
 color: black;
 padding: 60px;
 text-align: center 
}
 a {
 text-decoration: none;
 color: #109cf1;
}
 .content {
 background-color: orange;
 border-radius: 4px;
 margin: 0 auto;
 padding: 48px;
 width: 235px 
}
 ",
      "subject": {
        "en": "Your Arvest Bank account was accessed from an unknown device!",
      },
      "templateId": "arvestUnknownDeviceNotification",
    },
    "arvestWelcome": {
      "_id": "emailTemplate/arvestWelcome",
      "defaultLocale": "en",
      "description": "",
      "displayName": "ArvestWelcome",
      "enabled": true,
      "from": ""Arvest Admin" <admin@idcloud-demo.com>",
      "html": {
        "en": "<div class="content"><p>Welcome to Arvest Bank, {{object.givenName}}!</p><p><a href="https://openam-idcloud-demo.forgeblocks.com/am/XUI/?realm=/alpha#/service/IBX_Login">Access your account</a> with your new username: {{object.userName}}</p><p>We are looking forward to servicing all your banking needs!</p><p>Your Arvest Team</p></div>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: black; padding: 10px; text-align: left;"><div class="content" style="background-color: #ffffff; border-radius: 4px; margin: 0 auto; padding: 10px; width: 300px;"><p>Welcome to Arvest Bank, {{object.givenName}}!</p><p><a href="https://openam-idcloud-demo.forgeblocks.com/am/XUI/?realm=/alpha#/service/IBX_Login" style="text-decoration: none; color: #109cf1;">Access your account</a> with your new username: {{object.userName}}</p><p>We are looking forward to servicing all your banking needs!</p><p>Your Arvest Team</p></div></body></html>",
      },
      "mimeType": "text/html",
      "name": "Welcome",
      "styles": "body {
 background-color: #324054;
 color: black;
 padding: 10px;
 text-align: left 
}
 a {
 text-decoration: none;
 color: #109cf1;
}
 .content {
 background-color: #ffffff;
 border-radius: 4px;
 margin: 0 auto;
 padding: 10px;
 width: 300px 
}
 ",
      "subject": {
        "en": "Your registration with Arvest Bank",
      },
      "templateId": "arvestWelcome",
    },
    "ebInvitation": {
      "_id": "emailTemplate/ebInvitation",
      "advancedEditor": true,
      "defaultLocale": "en",
      "description": "",
      "displayName": "EBInvitation",
      "enabled": true,
      "from": ""J.P Morgan " <>",
      "html": {
        "en": "",
      },
      "message": {
        "en": "<html>
  <head></head>
  <body style="display: 'flex'; textAlign: 'center'; color: #455469; font-family: 'Open Sans';">
    <div class="content" style="textAlign: 'center'">
      <p> Dear {{object.givenName}}, </p>
      <h4 style="font-weight: 400; font-style: normal;">You have been invited to join
        <b>JPMC Embedded Banking</b>
      </h4>
      <table>
        <tr>
          <td style="text-decoration: none; color: white; background: #155c93; font-						style: normal; font-weight: 700; font-size: 14px; line-height: 22px; border-					radius: 3px; padding: 15px">
            <a href={{object.resumeURI}} style="text-decoration: none; color: white">ACCEPT INVITE</a>
          </td>
        </tr>
      </table>
      <h6 style="color: #999999; font-family: Inter; font-style: normal; font-weight: 400; font-size: 12px; line-height: 16px">Copyright © 2022 of J.P. Morgan Chase & Co.</h6>
    </div>
  </body>
</html>
 ",
      },
      "mimeType": "text/html",
      "name": "invitation",
      "styles": "body {
   margin: 0;
   padding: 0;
   color: #455469;
   font-family: 'Open Sans';
}
 table {
   width:100%;
   border-collapse:collapse;
   border:0;
   border-spacing:0;
   background:#ffffff;
   text-align: center;
}
 tbody {
}
 ",
      "subject": {
        "en": "You're invited to join the JPMC Embedded Banking",
      },
      "templateId": "ebInvitation",
    },
    "forgottenUsername": {
      "_id": "emailTemplate/forgottenUsername",
      "defaultLocale": "en",
      "enabled": true,
      "from": "",
      "html": {
        "en": "<html><body>{{#if object.userName}}<p>Your username is '{{object.userName}}'.</p>{{else}}If you received this email in error, please disregard.{{/if}}<p><a href="{{object.resumeURI}}">Click here to login</a></p></body></html>",
        "fr": "<html><body>{{#if object.userName}}<p>Votre nom d'utilisateur est '{{object.userName}}'.</p>{{else}}Si vous avez reçu cet e-mail par erreur, veuillez ne pas en tenir compte.{{/if}}<p><a href="{{object.resumeURI}}">Cliquez ici pour vous connecter</a></p></body></html>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: #455469; padding: 60px; text-align: center;"><div class="content" style="background-color: #fff; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;"><p>{{#if object.userName}}Your username is '{{object.userName}}'.</p><p>{{else}}If you received this email in error, please disregard.{{/if}}</p><p><a href="{{object.resumeURI}}" style="text-decoration: none; color: #109cf1;">Click here to login</a></p></div></body></html>",
        "fr": "<html><head></head><body style="background-color: #324054; color: #455469; padding: 60px; text-align: center;"><div class="content" style="background-color: #fff; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;">{{#if object.userName}}<p>Votre nom d'utilisateur est '{{object.userName}}'.</p>{{else}}Si vous avez reçu cet e-mail par erreur, veuillez ne pas en tenir compte.{{/if}}<p><a href="{{object.resumeURI}}" style="text-decoration: none; color: #109cf1;">Cliquez ici pour vous connecter</a></p></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body{background-color:#324054;color:#5e6d82;padding:60px;text-align:center}a{text-decoration:none;color:#109cf1}.content{background-color:#fff;border-radius:4px;margin:0 auto;padding:48px;width:235px}",
      "subject": {
        "en": "Account Information - username",
        "fr": "Informations sur le compte - nom d'utilisateur",
      },
    },
    "multiFactorEmailLink": {
      "_id": "emailTemplate/multiFactorEmailLink",
      "defaultLocale": "en",
      "enabled": true,
      "from": "",
      "message": {
        "en": "<html><body><h3>You started a login or profile update that requires MFA. </h3><h4><a href="{{object.resumeURI}}">Click to Proceed</a></h4></body></html>",
      },
      "mimeType": "text/html",
      "subject": {
        "en": "Multi-Factor Email for Identity Cloud login",
      },
    },
    "oneTimePassword": {
      "_id": "emailTemplate/oneTimePassword",
      "defaultLocale": "en",
      "enabled": true,
      "from": "",
      "message": {
        "en": "<h3>This is your one-time password:</h3><h4>{{object.description}}</a></h4>",
      },
      "mimeType": "text/html",
      "subject": {
        "en": "One-Time Password for login",
      },
    },
    "profileUpdateNotification": {
      "_id": "emailTemplate/profileUpdateNotification",
      "defaultLocale": "en",
      "displayName": "Profile Update Notification",
      "enabled": true,
      "from": "saas@forgerock.com",
      "html": {
        "en": "<div class="content"><p>Hello {{object.givenName}},</p><p>your user profile has been updated. If you did not make those changes yourself or requested them, please contact us immediately.</p><p>Kindest regards.</p></div>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: #455469; padding: 60px; text-align: center;"><div class="content" style="background-color: #fff; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;"><p>Hello {{object.givenName}},</p><p>your user profile has been updated. If you did not make those changes yourself or requested them, please contact us immediately.</p><p>Kindest regards.</p></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body {
 background-color: #324054;
 color: #455469;
 padding: 60px;
 text-align: center 
}
 a {
 text-decoration: none;
 color: #109cf1;
}
 .content {
 background-color: #fff;
 border-radius: 4px;
 margin: 0 auto;
 padding: 48px;
 width: 235px 
}
 ",
      "subject": {
        "en": "Your user profile has been updated",
      },
    },
    "profileUpdateNotificationEmailChange": {
      "_id": "emailTemplate/profileUpdateNotificationEmailChange",
      "defaultLocale": "en",
      "displayName": "Email Address Change Notification",
      "enabled": true,
      "from": "saas@forgerock.com",
      "html": {
        "en": "<div class="content"><p>Hello {{object.givenName}},</p><p>your user profile has been updated and your email address has changed. This email is sent to the old address we had on file. If you did not make those changes yourself or requested them, please contact us immediately.</p><p>Old: {{object.frUnindexedString5}}<br>
New: {{object.mail}}</p><p>Kindest regards.</p></div>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: #455469; padding: 60px; text-align: left;"><div class="content" style="background-color: #fff; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;"><p>Hello {{object.givenName}},</p><p>your user profile has been updated and your email address has changed. This email is sent to the old address we had on file. If you did not make those changes yourself or requested them, please contact us immediately.</p><p>Old: {{object.frUnindexedString5}}<br>
New: {{object.mail}}</p><p>Kindest regards.</p></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body {
 background-color: #324054;
 color: #455469;
 padding: 60px;
 text-align: left 
}
 a {
 text-decoration: none;
 color: #109cf1;
}
 .content {
 background-color: #fff;
 border-radius: 4px;
 margin: 0 auto;
 padding: 48px;
 width: 235px 
}
 ",
      "subject": {
        "en": "You email address and profile has been updated",
      },
    },
    "registration": {
      "_id": "emailTemplate/registration",
      "advancedEditor": true,
      "defaultLocale": "en",
      "displayName": "registration",
      "emailTemplate": {},
      "enabled": true,
      "from": ""J.P Morgan" <sass@forgerock.com>",
      "html": {
        "en": "",
        "fr": "",
      },
      "message": {
        "en": "<html>
  <head></head>
  <body style="color: #455469; text-align: center; font-family: 'Open Sans'; width: 400px; margin: auto;">
    <div class="content" style="background-color: #fff; border-radius: 4px;">
      <h4 id="youhavebeeninvitedtojoinjpmcembeddedbanking" style="font-style: normal; font-weight: 400;">You have been invited to join 
        
        <strong>JPMC Developer Console</strong>
      </h4>
      <p>
        <a href="{{object.resumeURI}}" style="text-decoration: none; color: white; background-color: #1A7B99; padding: 10px">ACCEPT INVITE</a>
      </p>
      <h6 id="copyright2022ofjpmorganchaseco" style="color: #999999; font-family: 'Inter'; -font-style: normal; font-weight: 400; font-size: 12px; line-height: 16px;">Copyright © 2022 of J.P. Morgan Chase & Co.</h6>
    </div>
  </body>
</html>",
        "fr": "<html><head></head><body style="color: #455469; text-align: center; font-family: 'Open Sans'; width: 400px; margin: auto;"><div class="content" style="background-color: #fff; border-radius: 4px;"><h3 id="ceciestvotremaildinscription" style="text-align: left;">Ceci est votre mail d'inscription.</h3><p><a href="{{object.resumeURI}}" style="text-decoration: none; color: white;">Lien de vérification email</a></p></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body {
   color: #455469;
   text-align: center;
   font-family: 'Open Sans';
   width: 400px;
   margin: auto;
}
 td {
   text-decoration: none;
   color: white;
   background: #155C93;
   font-style: normal;
   font-weight: 700;
   font-size: 14px;
   line-height: 22px;
   border-radius: 3px;
   padding: 15px;
}
 .content {
   background-color: #fff;
   border-radius: 4px;
}
 h2 {
   margin: 50px;
}
 h3 {
   text-align: left;
}
 h4 {
   font-style: normal;
   font-weight: 400;
}
 h5 {
   color: #666666;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
}
 h6 {
   color: #999999;
   font-family: 'Inter';
   -font-style: normal;
   font-weight: 400;
   font-size: 12px;
   line-height: 16px;
}
 table {
   margin: auto;
   background-color: #dedddc;
}
 tr {
   background-color: #dedddc;
}

a {
  text-decoration: none;
  color: white;
} ",
      "subject": {
        "en": "You're invited to join JPMC Embedded Banking",
        "fr": "Créer un nouveau compte",
      },
      "templateId": "registration",
    },
    "resetPassword": {
      "_id": "emailTemplate/resetPassword",
      "defaultLocale": "en",
      "enabled": true,
      "from": "",
      "message": {
        "en": "<h3>Click to reset your password</h3><h4><a href="{{object.resumeURI}}">Password reset link</a></h4>",
        "fr": "<h3>Cliquez pour réinitialiser votre mot de passe</h3><h4><a href="{{object.resumeURI}}">Mot de passe lien de réinitialisation</a></h4>",
      },
      "mimeType": "text/html",
      "subject": {
        "en": "Reset your password",
        "fr": "Réinitialisez votre mot de passe",
      },
    },
    "updatePassword": {
      "_id": "emailTemplate/updatePassword",
      "defaultLocale": "en",
      "enabled": true,
      "from": "",
      "html": {
        "en": "<h3>Verify email to update password</h3><p><a href="{{object.resumeURI}}">Update password link</a></p>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: #5e6d82; padding: 60px; text-align: center;"><div class="content" style="background-color: #fff; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;"><h3 id="verifyemailtoupdatepassword">Verify email to update password</h3><p><a href="{{object.resumeURI}}" style="text-decoration: none; color: #109cf1;">Update password link</a></p></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body{background-color:#324054;color:#5e6d82;padding:60px;text-align:center}a{text-decoration:none;color:#109cf1}.content{background-color:#fff;border-radius:4px;margin:0 auto;padding:48px;width:235px}",
      "subject": {
        "en": "Update your password",
      },
    },
    "welcome": {
      "_id": "emailTemplate/welcome",
      "defaultLocale": "en",
      "displayName": "Welcome",
      "enabled": true,
      "from": "saas@forgerock.com",
      "html": {
        "en": "<div class="content"><p>Welcome. Your username is '{{object.userName}}'.</p></div>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: #5e6d82; padding: 60px; text-align: center;"><div class="content" style="background-color: #fff; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;"><p>Welcome. Your username is '{{object.userName}}'.</p></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body{
 background-color:#324054;
 color:#5e6d82;
 padding:60px;
 text-align:center
}
a{
 text-decoration:none;
 color:#109cf1
}
.content{
 background-color:#fff;
 border-radius:4px;
 margin:0 auto;
 padding:48px;
 width:235px
}
",
      "subject": {
        "en": "Your account has been created",
      },
    },
  },
  "meta": Any<Object>,
}
`;

exports[`frodo email template export "frodo email template export -i activation -f my-activation.template.email.json": should export the email template with email id "activation" into file named my-activation.template.email.json 1`] = `""`;

exports[`frodo email template export "frodo email template export -i activation -f my-activation.template.email.json": should export the email template with email id "activation" into file named my-activation.template.email.json: ./my-activation.template.email.json 1`] = `
{
  "emailTemplate": {
    "activation": {
      "_id": "emailTemplate/activation",
      "defaultLocale": "en",
      "displayName": "Activation",
      "emailTemplate": {},
      "enabled": true,
      "from": ""ForgeRock Identity Cloud Team" <saas@forgerock.com>",
      "html": {
        "en": "<div class="content"><p>Welcome {{object.givenName}}.</p><p>Your username is '{{object.userName}}'.</p></div>",
      },
      "message": {
        "en": "<html><head></head><body style="background-color: #324054; color: #455469; padding: 60px; text-align: center;"><div class="content" style="background-color: #fff; border-radius: 4px; margin: 0 auto; padding: 48px; width: 235px;"><p>Welcome {{object.givenName}}.</p><p>Your username is '{{object.userName}}'.</p></div></body></html>",
      },
      "mimeType": "text/html",
      "styles": "body {
	background-color: #324054;
	color: #455469;
	padding: 60px;
	text-align: center
}

a {
	text-decoration: none;
	color: #109cf1;
}

.content {
	background-color: #fff;
	border-radius: 4px;
	margin: 0 auto;
	padding: 48px;
	width: 235px
}
",
      "subject": {
        "en": "Your J.P. Morgan account has been activated",
      },
      "templateId": "activation",
    },
  },
  "meta": Any<Object>,
}
`;
